# OOP

SeaBattle/: CMakeLists.txt  field.cpp  field.h  game_process.cpp  game_process.h  main.cpp  model.cpp  model.h  player.cpp  player.h  view.cpp  view.h
calculator/: CMakeLists.txt  Factory.cpp  Factory.h  base.h  calculator.cpp  calculator.h  comment.cpp  define.cpp  dev.cpp  execution.cpp  execution.h  main.cpp  mult.cpp  plus.cpp  pop.cpp  print.cpp  push.cpp  sqrt.cpp  sub.cpp
cognitron/: CMakeLists.txt  C_plane.cpp  C_plane.h  Label.cpp  Label.h  Neocognitron.cpp  Neocognitron.h  Parser.cpp  Parser.h  S_plane.cpp  S_plane.h  Stage.cpp  Stage.h  V_plane.cpp  V_plane.h  main.cpp
parceptron_nef/: CMakeLists.txt  Data.h  Label.cpp  Label.h  Layer.cpp  Layer.h  Neural_net.cpp  Neural_net.h  Neuron.cpp  Neuron.h  Normalizer.cpp  Normalizer.h  Parser.cpp  Parser.h  main.cpp
parceptron_nef/data/: data3.csv  data4.csv
trits/: CMakeLists.txt  TritSet.cpp  TritSet.h  main.cpp
trits/Tests/: Test.cpp
